--- a/html/html_Moudles/header.html
+++ b/html/html_Moudles/header.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/dropzone.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css"> -->
     
