--- a/html/html_Moudles/footer.html
+++ b/html/html_Moudles/footer.html
@@ -12,6 +12,8 @@
    <script src="js/jquery.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
   	<script src="js/dropzone.js"></script>
+    <script src="js/transition.js"></script>
+    <script src="js/dropdown.js"></script>
   <script src="js/main.js"></script>
 
   
