--- a/html/html_Moudles/header.html
+++ b/html/html_Moudles/header.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/dropzone.css">
+    <link rel="stylesheet" href="css/semantic.min.css">
+
+    <!-- <link rel="stylesheet" href="css/dropdown.css"> -->
     <link rel="stylesheet" href="css/style.css">
     
     <!-- <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css"> -->
