--- a/project-create.html
+++ b/project-create.html
@@ -66,13 +66,12 @@
                     </li>
                   </ul>
         
-                <li><a href="#">Project Workspace</a></li>
-                <li><a href="#">To-Do List</a></li>
-                <li><a href="#">Issue Tracker</a></li>
-                <li><a href="#">Wiki</a></li>
-                <li><a href="#">Milestones</a></li>
-                <li><a href="#">Reports</a></li>
-                <li><a href="#">Wiki</a></li>
+                <li><a href="projectworkspace.html">Project Workspace</a></li>
+                <li><a href="to-do-todo.html">To-Do List</a></li>
+                <li><a href="issuestracker.html">Issue Tracker</a></li>
+                <li><a href="wiki.html">Wiki</a></li>
+                <li><a href="reports.html">Reports</a></li>
+                <li><a href="files.html">Files</a></li>
                 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
