--- a/html/select-business.html
+++ b/html/select-business.html
@@ -118,6 +118,9 @@
 			</div> <!-- projects -->
 		</div> <!-- content-page -->
 
-
-
+		<footer class="site-footer">
+			
+			<p class="pull-right">Copyright 2016</p>
+			<p >Unlimited Project / 25 Users</p>	
+		</footer>
          <!-- @include html_Moudles/footer.html -->
