--- a/html/index.html
+++ b/html/index.html
@@ -12,5 +12,9 @@
  		   
  		    	<button type="submit" class="btn btn-primary">Submit</button>
  		    </form>    
-
+ 		    <footer class="site-footer">
+ 		    	
+ 		    	<p class="pull-right">Copyright 2016</p>
+ 		    	<p >Unlimited Project / 25 Users</p>	
+ 		    </footer>
          <!-- @include html_Moudles/footer.html -->
