--- a/html/login.html
+++ b/html/login.html
@@ -26,5 +26,9 @@
 				</div>
 			</div>
 		</div>   
-
+		<footer class="site-footer signup">
+				
+				<p class="text-center">Copyright 2016</p>
+				
+			</footer>
          <!-- @include html_Moudles/footer.html -->
