--- a/html/project-create.html
+++ b/html/project-create.html
@@ -149,7 +149,11 @@
 			  </div>
 			</div>
 		<!-- Without Border -->
-		
+		<footer class="site-footer">
+			
+			<p class="pull-right">Copyright 2016</p>
+			<p >Unlimited Project / 25 Users</p>	
+		</footer>
 
          <!-- @include html_Moudles/footer.html -->
 
