--- a/html/setup-your-business.html
+++ b/html/setup-your-business.html
@@ -86,6 +86,10 @@
 
 		</div> <!-- content-page -->
 
-
+		<footer class="site-footer">
+			
+			<p class="pull-right">Copyright 2016</p>
+			<p >Unlimited Project / 25 Users</p>	
+		</footer>
 
          <!-- @include html_Moudles/footer.html -->
