--- a/html/select-business.html
+++ b/html/select-business.html
@@ -1,13 +1,13 @@
         <!-- @include html_Moudles/header.html -->
 
-		<!-- @include html_Moudles/nav.html --> 		  
+		<!-- @include html_Moudles/nav-2.html --> 		  
 		
 		<div class="content-page">
 			<div class="projects">
 			
 				<div class="row">
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					 	<div class="busi_work_place">
+					 	<div class="busi_work_place" onclick="location.href='dasboard-board.html';">
 					 		<header>
 					 			<p>US Tech Solutions Private Limited</p>
 					 			
@@ -27,7 +27,7 @@
 					 </div> 
 
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					 	<div class="busi_work_place">
+					 	<div class="busi_work_place" onclick="location.href='dasboard-board.html';">
 					 		<header>
 					 			<p>US Tech Solutions Private Limited</p>
 					 			<span class="inactive">inactive</span>
@@ -47,7 +47,7 @@
 					 </div>
 
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					 	<div class="busi_work_place">
+					 	<div class="busi_work_place" onclick="location.href='dasboard-board.html';">
 					 		<header>
 					 			<p>US Tech Solutions Private Limited</p>
 					 			<span class="inactive">inactive</span>
@@ -70,7 +70,7 @@
 
 				<div class="row">
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					 	<div class="busi_work_place">
+					 	<div class="busi_work_place" onclick="location.href='dasboard-board.html';">
 					 		<header>
 					 			<p>US Tech Solutions Private Limited</p>
 					 			
@@ -90,7 +90,7 @@
 					 </div> 
 
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					 	<div class="busi_work_place">
+					 	<div class="busi_work_place" onclick="location.href='dasboard-board.html';">
 					 		<header>
 					 			<p>US Tech Solutions Private Limited</p>
 					 			<span class="inactive">inactive</span>
