--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-					<form action="" method="POST" role="form">
+					<form action="select-business.html " method="POST" role="form">
 						<p class="bold">Member Login</p>
 						<h3>Welcome, start using it today!.</h3>
 						<div class="error-notify">
@@ -53,7 +53,7 @@
 							<label for="">Password</label>
 							<input type="text" class="form-control" id="" placeholder="">
 						</div>
-						<button type="submit" class="btn btn-block btn-success">Login</button>
+						<button type="submit" class="btn btn-block btn-success" onclick="location.href='select-business.html';">Login</button>
 						<a href="" class="blue-underline">Forgot Password?</a>
 						<a href="" class="blue-underline">Dont’t have a account - Sign Up </a>
 					</form>
