--- a/dasboard-board.html
+++ b/dasboard-board.html
@@ -66,7 +66,7 @@
 		            </li>
 		          </ul>
 		
-		        <li><a href="projectworkspace.html">Project Workspace</a></li>
+		        <li><a href="dasboard-board.html">Project Workspace</a></li>
 		        <li><a href="to-do-todo.html">To-Do List</a></li>
 		        <li><a href="issuestracker.html">Issue Tracker</a></li>
 		        <li><a href="wiki.html">Wiki</a></li>
