--- a/html/html_Moudles/nav.html
+++ b/html/html_Moudles/nav.html
@@ -19,13 +19,13 @@
           <div class="triangle"></div>
           <ul class="dropdown-menu left">
             <li>
-              <a href="#">Profile</a>
+              <a href="#">Add Project</a>
             </li>
             <li>
-              <a href="#">Inbox</a>
+              <a href="#">Add To-Do Task</a>
             </li>
             <li>
-              <a href="#">Settings</a>
+              <a href="#">Add Issues</a>
             </li>
           </ul>
 
@@ -48,13 +48,22 @@
           <div class="triangle"></div>
           <ul class="dropdown-menu right">
             <li>
-              <a href="#">Profile</a>
+              <a href="#">Edit Your Profile</a>
             </li>
             <li>
-              <a href="#">Inbox</a>
+              <a href="#">Change Password</a>
             </li>
             <li>
-              <a href="#">Settings</a>
+              <a href="#">Team Members</a>
+            </li>
+            <li>
+              <a href="#">Update Profile</a>
+            </li>
+            <li>
+              <a href="#">Billing & Package</a>
+            </li>
+            <li>
+              <a href="#">Logoff</a>
             </li>
           </ul>
         </li>
