--- a/dasboard-board.html
+++ b/dasboard-board.html
@@ -56,13 +56,13 @@
 		          <div class="triangle"></div>
 		          <ul class="dropdown-menu left">
 		            <li>
-		              <a href="#">Profile</a>
+		              <a href="#">Add Project</a>
 		            </li>
 		            <li>
-		              <a href="#">Inbox</a>
+		              <a href="#">Add To-Do Task</a>
 		            </li>
 		            <li>
-		              <a href="#">Settings</a>
+		              <a href="#">Add Issues</a>
 		            </li>
 		          </ul>
 		
@@ -85,13 +85,22 @@
 		          <div class="triangle"></div>
 		          <ul class="dropdown-menu right">
 		            <li>
-		              <a href="#">Profile</a>
+		              <a href="#">Edit Your Profile</a>
 		            </li>
 		            <li>
-		              <a href="#">Inbox</a>
+		              <a href="#">Change Password</a>
 		            </li>
 		            <li>
-		              <a href="#">Settings</a>
+		              <a href="#">Team Members</a>
+		            </li>
+		            <li>
+		              <a href="#">Update Profile</a>
+		            </li>
+		            <li>
+		              <a href="#">Billing & Package</a>
+		            </li>
+		            <li>
+		              <a href="#">Logoff</a>
 		            </li>
 		          </ul>
 		        </li>
@@ -113,7 +122,7 @@
 						<li>
 							<a href="#">Home</a>
 						</li>
-						<li>
+						<li> 
 							<a href="#">Link</a>
 						</li>
 						<li class="active">Current</li>
