--- a/login-seccuss.html
+++ b/login-seccuss.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="success-notify-loging">
 					 <i class="fa fa-smile-o"></i>
-					<p>Awesome! Thanks for Signup. Please check your email for instruction on next step.</p>
+					<h4>Awesome! Thanks for Signup. Please check your email for instruction on next step.</h4>
 				</div>
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
