--- a/html/forgot password.html
+++ b/html/forgot password.html
@@ -5,23 +5,20 @@
 				<div class="success-notify-loging">
 					 <i class="fa fa-smile-o"></i>
 					<h4>Awesome! Thanks for Signup. Please check your email for instruction on next step.</h4>
-				</div>
+				</div> 
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
 					<form action="select-business.html " method="POST" role="form">
-						<p class="bold">Member Login</p>
-						<h3>Welcome, start using it today!.</h3>
+						<p class="bold">Passport Reset</p>
+						<h3>I forgot my password.</h3>
 						
 						<div class="form-group">
 							<label for="">Email Address</label>
 							<input type="text" class="form-control" id="" placeholder="">
 						</div> 
 
-						<div class="form-group">
-							<label for="">Password</label>
-							<input type="text" class="form-control" id="" placeholder="">
-						</div>
-						<button type="submit" class="btn btn-block btn-success" onclick="location.href='select-business.html';">Login</button>
+						
+						<button type="submit" class="btn btn-block btn-success" onclick="location.href='select-business.html';">Request for Password Reset</button>
 						<a href="" class="blue-underline">Forgot Password?</a>
 						<a href="" class="blue-underline">Dont’t have a account - Sign Up </a>
 					</form>
