--- a/html/forget-password.html
+++ b/html/forget-password.html
@@ -17,10 +17,9 @@
 							<input type="text" class="form-control" id="" placeholder="">
 						</div> 
  
-						
+						 
 						<button type="submit" class="btn btn-block btn-success" onclick="location.href='select-business.html';">Request for Password Reset</button>
-						<a href="" class="blue-underline">Forgot Password?</a>
-						<a href="" class="blue-underline">Dont’t have a account - Sign Up </a>
+						<a href="login.html" class="blue-underline">Back to Login</a>						
 					</form>
 				</div>
 			</div>
