--- a/html/_index.html
+++ b/html/_index.html
@@ -724,9 +724,6 @@ pre {
 </style><title>index</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-proojo-new-app" class="anchor" href="#proojo-new-app" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proojo new App</h1>
 
-<h2>
-<a id="user-content-login-logout" class="anchor" href="#login-logout" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Login Logout</h2>
-
 <p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>
 <a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>
 <a href="http://fiberelephant.com/proojo_new_app/login-seccuss.html">http://fiberelephant.com/proojo_new_app/login-seccuss.html</a></p>
@@ -734,8 +731,7 @@ pre {
 <p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a>
 <a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a></p>
 
-<p><strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a></p>
 
 <p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a> 
 <a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a>
