--- a/index.html
+++ b/index.html
@@ -727,18 +727,18 @@ pre {
 <h2>
 <a id="user-content-login-logout" class="anchor" href="#login-logout" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Login Logout</h2>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>
-<a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>
-<a href="http://fiberelephant.com/proojo_new_app/login-seccuss.html">http://fiberelephant.com/proojo_new_app/login-seccuss.html</a></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a><br>
+<a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a><br>
+<a href="http://fiberelephant.com/proojo_new_app/login-seccuss.html">http://fiberelephant.com/proojo_new_app/login-seccuss.html</a><br></p>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a>
-<a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a><br>
+<a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a><br></p>
 
 <p><strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a></p>
+<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a><br></p>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a> 
-<a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a>
-<a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a>
-<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a> <br>
+<a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a><br>
+<a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a><br>
+<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a><br></p>
 </article></body></html>
