--- a/signup.html
+++ b/signup.html
@@ -75,7 +75,7 @@
 								<input type="text" class="form-control" id="" placeholder="">
 							</div>
 
-							<button type="submit" class="btn btn-block btn-success">Sign Up</button>
+							<a href="setup-your-business.html" class="btn btn-block btn-success">Sign Up</a>
 							<a href="" class="blue-underline">Already have an account? Log in here</a>
 							
 						</form>
