--- a/setup-your-business.html
+++ b/setup-your-business.html
@@ -139,11 +139,14 @@
 
 									<div class="form-group">
 										<label for="">Select Your Time Zone </label>
-										<input type="text" class="form-control" id="" placeholder="">
+										<select name="" id="input" class="form-control" required="required">
+											<option value="">+92</option>
+										</select>
+										
 									</div>
 
 									
-									<button type="submit" class="btn btn-block btn-success">Continue</button>
+									<button type="submit" class="btn btn-block btn-success" onclick="location.href='dasboard-board.html';">Continue</button>
 								</form>
 							</div>
 
