--- a/index.html
+++ b/index.html
@@ -722,20 +722,20 @@ pre {
   border-color: #4078c0;
 }
 </style><title>index</title></head><body><article class="markdown-body"><h1>
-<a id="user-content-proojo-new-app" class="anchor" href="#proojo-new-app" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proojo new App</h1>
+<a id="user-content-proojo-new-app" class="anchor" href="#proojo-new-app" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proojo New App</h1>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a><br>
-<a href="http://fiberelephant.com/proojo_new_app/login-error.html">http://fiberelephant.com/proojo_new_app/login-error.html</a><br>
-<a href="http://fiberelephant.com/proojo_new_app/login-success.html">http://fiberelephant.com/proojo_new_app/login-success.html</a><br></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>                      <br>
+<a href="http://fiberelephant.com/proojo_new_app/login-error.html">http://fiberelephant.com/proojo_new_app/login-error.html</a>                <br>
+<a href="http://fiberelephant.com/proojo_new_app/login-success.html">http://fiberelephant.com/proojo_new_app/login-success.html</a>              <br></p>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a><br>
-<a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a><br></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a>                     <br>
+<a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a>               <br></p>
 
 <p><strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a><br></p>
+<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a>            <br></p>
 
-<p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a> <br>
-<a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a><br>
-<a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a><br>
-<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a><br></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a>             <br>
+<a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a>             <br>
+<a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a>            <br>
+<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a>        <br></p>
 </article></body></html>
