--- a/index.html
+++ b/index.html
@@ -739,5 +739,5 @@ pre {
 <a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a>            <br>
 <a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a>        <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/contact-form.html.html">http://fiberelephant.com/proojo_new_app/contact-form.html.html</a>      <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/contact-form.html">http://fiberelephant.com/proojo_new_app/contact-form.html</a>       <br></p>
 </article></body></html>
