--- a/setup-your-business.html
+++ b/setup-your-business.html
@@ -140,7 +140,7 @@
 									<div class="form-group">
 										<label for="">Select Your Time Zone </label>
 										<select name="" id="input" class="form-control" required="required">
-											<option value="">+92</option>
+											<option value=""></option>
 										</select>
 										
 									</div>
