--- a/dasboard-board.html
+++ b/dasboard-board.html
@@ -137,7 +137,8 @@
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					 	<div class="project">
 					 		<header>
-					 			<h4>US Tech Recruitment Drive</h4>
+					 			<h4>US Tech Recruitment Drive
+					 			US Tech Recruitment Drive</h4>
 					 			<p><img src="img/icon-2.png" class="inline-block"></span>11 Team Members </p>
 					 		</header>
 					 		<div class="content">
@@ -175,6 +176,7 @@
 					 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					 	<div class="project">
 					 		<header>
+					 			<h4>infosys Hiring Needs for PHP</h4>
 					 			<h4>infosys Hiring Needs for PHP</h4>
 					 			<p><img src="img/icon-2.png" class="inline-block"></span>11 Team Members </p>
 					 		</header>
