--- a/html/login-success.html
+++ b/html/login-success.html
@@ -2,7 +2,7 @@
 		
 		<div class="logign-form-wraper">
 			<div class="row">
-				<div class="success-notify-loging">
+				<div class="success-notify">
 					 <i class="fa fa-smile-o"></i>
 					<h4>Awesome! Thanks for Signup. Please check your email for instruction on next step.</h4>
 				</div> 
