--- a/index.html
+++ b/index.html
@@ -731,13 +731,14 @@ pre {
 <p><a href="http://fiberelephant.com/proojo_new_app/signup.html">http://fiberelephant.com/proojo_new_app/signup.html</a>                     <br>
 <a href="http://fiberelephant.com/proojo_new_app/signup-error.html">http://fiberelephant.com/proojo_new_app/signup-error.html</a>               <br></p>
 
-<p><strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a>            <br></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/forget-password.html">http://fiberelephant.com/proojo_new_app/forget-password.html</a>            <br></p>
 
 <p><a href="http://fiberelephant.com/proojo_new_app/dasboard-board.html">http://fiberelephant.com/proojo_new_app/dasboard-board.html</a>             <br>
 <a href="http://fiberelephant.com/proojo_new_app/project-create.html">http://fiberelephant.com/proojo_new_app/project-create.html</a>             <br>
 <a href="http://fiberelephant.com/proojo_new_app/select-business.html">http://fiberelephant.com/proojo_new_app/select-business.html</a>            <br>
-<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a>        <br>
+<a href="http://fiberelephant.com/proojo_new_app/setup-your-business.html">http://fiberelephant.com/proojo_new_app/setup-your-business.html</a>        <br></p>
+
+<p><a href="http://fiberelephant.com/proojo_new_app/contact-form.html">http://fiberelephant.com/proojo_new_app/contact-form.html</a>               <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/contact-form.html">http://fiberelephant.com/proojo_new_app/contact-form.html</a>       <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/invite-team-members.html">http://fiberelephant.com/proojo_new_app/invite-team-members.html</a>        <br></p>
 </article></body></html>
