--- a/html/html_Moudles/footer.html
+++ b/html/html_Moudles/footer.html
@@ -4,11 +4,13 @@
     
     </div>
     <!-- /wrap -->
-   <script src="js/jquery.min.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-  	<script src="js/dropzone.js"></script>
-    <script src="js/transition.js"></script>
-    <script src="js/dropdown.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropzone.js"></script>
+  <script src="js/transition.js"></script>
+  <script src="js/dropdown.js"></script>
+  <script src="js/avatar-uploader/resample.js"></script>
+  <script src="js/avatar-uploader/avatar.js"></script>
   <script src="js/main.js"></script>
 
   
