--- a/invite-team-members.html
+++ b/invite-team-members.html
@@ -38,7 +38,7 @@
 			<div class="row">
 
 				<div class="success-notify">
-					 <i class="fa  fa-check-circle-o"></i>
+					 <i class="notify-check"></i>
 					<h4>Thanks for Accepting the invite from “Business Name” for following workspace.</h4>
 				</div> 
 
@@ -73,7 +73,7 @@
 						</div>
 						<div class="clearfix"></div>
  						<div class="form-group clearfix no-margin">
- 							<label for="">Your Name</label>
+ 							<label for="">Upload / Select Your Avatar</label>
  							
  							<div class="profile-avatar-wrap"> 							
 	 							<img src="img/256.jpg" id="profile-avatar" alt="Image for Profile">	 							
@@ -90,7 +90,7 @@
 							
 						</div>
 						<div class="form-group">
-							<label for="">Password</label>
+							<label for="">Your Password</label>
 							<input type="text" class="form-control" id="" placeholder="">
 						</div>
 
