--- a/html/html_Moudles/header.html
+++ b/html/html_Moudles/header.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/semantic.min.css">
 
      <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
 
     <!-- <link rel="stylesheet" href="css/dropdown.css"> -->
     <link rel="stylesheet" href="css/style.css">
