--- a/html/html_Moudles/header.html
+++ b/html/html_Moudles/header.html
@@ -23,7 +23,7 @@
     <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
 
     <!-- <link rel="stylesheet" href="css/dropdown.css"> -->
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css"> -->
     
