finished app-setting

--- a/html/app-teammeber.html
+++ b/html/app-teammeber.html
@@ -58,7 +58,7 @@
                                               <div class="invite-team">
                                                   <form action="" method="POST" role="form">
                                                     <div class="row no-margin">
-                                                        <div class="col-sm-4 no-padding">
+                                                        <div class="col-sm-4 noz-padding">
                                                             <div class="form-group">
                                                                 <label for="">Invite Team Members</label>
                                                                 <input type="text" class="form-control" id="" placeholder="Your email address">
