--- a/index-2.html
+++ b/index-2.html
@@ -744,5 +744,7 @@ pre {
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/invite-team-members.html">http://fiberelephant.com/proojo_new_app/invite-team-members.html</a>        <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/app-teammeber.html">http://fiberelephant.com/proojo_new_app/app-teammeber.html</a>              <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/app-teammeber.html">http://fiberelephant.com/proojo_new_app/app-teammeber.html</a>              <br>
+<strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/app-settings.html">http://fiberelephant.com/proojo_new_app/app-settings.html</a>               <br></p>
 </article></body></html>
