--- a/index-2.html
+++ b/index-2.html
@@ -744,9 +744,11 @@ pre {
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/invite-team-members.html">http://fiberelephant.com/proojo_new_app/invite-team-members.html</a>        <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/app-teammeber.html">http://fiberelephant.com/proojo_new_app/app-teammeber.html</a>              <br>
+<a href="http://fiberelephant.com/proojo_new_app/app-teammember.html">http://fiberelephant.com/proojo_new_app/app-teammember.html</a>                 <br>
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/app-settings.html">http://fiberelephant.com/proojo_new_app/app-settings.html</a>               <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/app-change-password.html">http://fiberelephant.com/proojo_new_app/app-change-password.html</a>        <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/app-change-password.html">http://fiberelephant.com/proojo_new_app/app-change-password.html</a>        <br>
+<strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/app-update-profile.html">http://fiberelephant.com/proojo_new_app/app-update-profile.html</a>         <br></p>
 </article></body></html>
