--- a/html/app-update-profile.html
+++ b/html/app-update-profile.html
@@ -46,8 +46,8 @@
                                       <div class="row">
                                           <div class="col-lg-12">
                                               <header>
-                                                  <h4>Change Password</h4>
-                                                  <p>Invite Team Members to Start Colloboratign on Projects.</p>
+                                                  <h4>Update Your Profile</h4>
+                                                  <p>Update your personal details so that you get personalized.</p>
                                               </header>
                                               <div class="col-xm-12  no-padding">
                                                 <div class="update-profile">
