--- a/index-2.html
+++ b/index-2.html
@@ -754,5 +754,7 @@ pre {
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/app-billing.html">http://fiberelephant.com/proojo_new_app/app-billing.html</a>                <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html">http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html</a> <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html">http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html</a> <br>
+<strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/workspace-dashboad.html">http://fiberelephant.com/proojo_new_app/workspace-dashboad.html</a> <br></p>
 </article></body></html>
