--- a/html/create-topic-discussion.html
+++ b/html/create-topic-discussion.html
@@ -85,7 +85,10 @@
 				    		</div>
 					    </div>
 					    <footer>
-					    	<i class="fa fa-paperclip"></i>
+					    	<i class="fa fa-paperclip fake-uploader"></i>
+					    	<input 
+					    	type="file" name="" id="editor-file" class="form-control" value="" required="required" pattern="" title="">
+					    	<span class="file-name"></span>
 					    	<a href="" class="btn btn-send"><i class="glyphicon glyphicon-triangle-right"></i></a>
 					    </footer>
 					  </div>
