nav  fix responsive

--- a/index-2.html
+++ b/index-2.html
@@ -756,5 +756,10 @@ pre {
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html">http://fiberelephant.com/proojo_new_app/create-project-works-firsttimeuser.html</a> <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/workspace-dashboad.html">http://fiberelephant.com/proojo_new_app/workspace-dashboad.html</a> <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/workspace-dashboad.html">http://fiberelephant.com/proojo_new_app/workspace-dashboad.html</a> <br>
+<strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html">http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html</a> <br> == icon pending input pending.</p>
+
+<p><strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/create-topic-discussion.html">http://fiberelephant.com/proojo_new_app/create-topic-discussion.html</a> <br></p>
 </article></body></html>
