updated invoice window

--- a/index-2.html
+++ b/index-2.html
@@ -724,7 +724,7 @@ pre {
 </style><title>index-2</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-proojo-new-app" class="anchor" href="#proojo-new-app" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proojo New App</h1>
 
-<p><a href="http://fiberelephant.com/proojo_new_app">http://fiberelephant.com/proojo_new_app</a>         <br></p>
+<p><a href="http://fiberelephant.com/proojo_new_app/index-2.html">http://fiberelephant.com/proojo_new_app/index-2.html</a>        <br></p>
 
 <p><a href="http://fiberelephant.com/proojo_new_app/login.html">http://fiberelephant.com/proojo_new_app/login.html</a>                      <br>
 <a href="http://fiberelephant.com/proojo_new_app/login-error.html">http://fiberelephant.com/proojo_new_app/login-error.html</a>                <br>
@@ -758,8 +758,8 @@ pre {
 <strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/workspace-dashboad.html">http://fiberelephant.com/proojo_new_app/workspace-dashboad.html</a> <br>
 <strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html">http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html</a> <br> == icon pending input pending.</p>
+<a href="http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html">http://fiberelephant.com/proojo_new_app/create-project-works-discussion.html</a> <br> </p>
 
 <p><strong>New</strong>
-<a href="http://fiberelephant.com/proojo_new_app/create-topic-discussion.html">http://fiberelephant.com/proojo_new_app/create-topic-discussion.html</a> <br></p>
+<a href="http://fiberelephant.com/proojo_new_app/create-topic-discussion.html">http://fiberelephant.com/proojo_new_app/create-topic-discussion.html</a> <br> == icon pending </p>
 </article></body></html>
