updated invoice window

--- a/html/app-settings.html
+++ b/html/app-settings.html
@@ -1,18 +1,18 @@
         <!-- @include html_Moudles/header.html -->
 
 
-        <!-- @include html_Moudles/nav.html -->     
-        
+        <!-- @include html_Moudles/nav-3.html -->     
+          
           <div class="content-page clearfix">
                 <div class="sidebar-page">                 
-                <div class="row">
+                <div class="row"> 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <!-- Sidebar -->
                               <div id="sidebar-wrapper">
                                 <header>
                                     <h5 class="username">
-                                      Welcome David Webb
-                                    </h5>
+                                      Welcome David Webb 
+                                    </h5> 
                                     <p>Member Since :10th May 2015</p>
                                     <span class="bullet">34 Active Projects</span>
                                     <span class="bullet">21 Members</span>
