--- a/html/html_Moudles/footer.html
+++ b/html/html_Moudles/footer.html
@@ -11,6 +11,7 @@
   <script src="js/dropdown.js"></script>
   <script src="js/avatar-uploader/resample.js"></script>
   <script src="js/avatar-uploader/avatar.js"></script>
+  <script src="js/editor.js"></script>
   <script src="js/main.js"></script>
 
   
