--- a/html/html_Moudles/header.html
+++ b/html/html_Moudles/header.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/dropzone.css">
     <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="css/editor.css">
 
      <!-- Custom CSS -->
     <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
