--- a/html/create-new-discussion-thred.html
+++ b/html/create-new-discussion-thred.html
@@ -62,11 +62,11 @@
 			<div class="create-thread">
 					<div class="thread-editor">
 						<header>
-							<h4>Discusson</h4>
+							<h4>New Discusson</h4>
 						</header> 
 							<div class="thread-content">
 								<div class="row">
-									<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+									<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
 										<div class="form-group">
 											<label for="input-id" >Discussion topice/ Thread</label>
 											<input type="text" name="" id="input" class="form-control" value="" required="required" pattern="" title="">
@@ -78,7 +78,7 @@
 						        		</div>
 
 									</div>
-									<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+									<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
 										<div action="#" class="dropzone dz-clickable" id="dropzone">                    						
 					                    	<div class="dz-default dz-message">
 					                    		
@@ -90,7 +90,7 @@
 							</div>
 						<footer>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, culpa!</p>
-							<a href="">Click here</a>
+							<a href="" class="blue-underline">Click here</a>
 						</footer>
 					</div>
 					<button type="button" class="btn btn-success">Post Message</button>
