--- a/create-new-discussion-thred.html
+++ b/create-new-discussion-thred.html
@@ -181,7 +181,7 @@
 						</header> 
 							<div class="thread-content">
 								<div class="row">
-									<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
+									<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 left">
 										<div class="form-group">
 											<label for="input-id" >Discussion topice/ Thread</label>
 											<input type="text" name="" id="input" class="form-control" value="" required="required" pattern="" title="">
@@ -193,7 +193,7 @@
 						        		</div>
 
 									</div>
-									<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+									<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 right">
 										<div action="#" class="dropzone dz-clickable" id="dropzone">                    						
 					                    	<div class="dz-default dz-message">
 					                    		
