new discuss remove

--- a/create-new-discussion-thred-remove.html
+++ b/create-new-discussion-thred-remove.html
@@ -203,10 +203,22 @@
 									</div>
 								</div>
 							</div>
-						<footer>
-							<p>11 members can access this message - Do you like to remove someone from the discusion.</p>
-							<a href="" class="blue-underline">Click here</a>
-						</footer>
+						<div class="remove">
+							<p>Member who are part of this Workspace - </p>
+							<a href="" class="blue-underline">Close</a>
+							<div class="members">
+								<span class="bubble">Project Workspace Administrator</span>
+								<span class="bubble">issue Tracker Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+
+							</div>
+						</div>
 					</div>
 					<button type="button" class="btn btn-success">Post Message</button>
 			</div>  <!-- create-thread -->	
