new discuss remove

--- a/index-2.html
+++ b/index-2.html
@@ -762,4 +762,9 @@ pre {
 
 <p><strong>New</strong>
 <a href="http://fiberelephant.com/proojo_new_app/create-topic-discussion.html">http://fiberelephant.com/proojo_new_app/create-topic-discussion.html</a> <br> == icon pending </p>
+
+<p><strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/create-new-discussion-thred.html">http://fiberelephant.com/proojo_new_app/create-new-discussion-thred.html</a> <br>
+ <strong>New</strong>
+<a href="http://fiberelephant.com/proojo_new_app/create-new-discussion-thred-remove.html">http://fiberelephant.com/proojo_new_app/create-new-discussion-thred-remove.html</a> <br> </p>
 </article></body></html>
