new discuss remove

--- a/html/create-new-discussion-thread-remove.html
+++ b/html/create-new-discussion-thread-remove.html
@@ -14,7 +14,7 @@
 						<li class="active">Project Workspace</li>
 					</ol>
 					 
-				</div>
+				</div> 
 				<h3>US Tech Website Redesign Project</h3>
 			</header>
 		</div> <!-- content-page -->
@@ -92,15 +92,15 @@
 							<p>Member who are part of this Workspace - </p>
 							<a href="" class="blue-underline">Close</a>
 							<div class="members">
-								<span class="bubble">Project Workspace Administrator</span>
-								<span class="bubble">issue Tracker Manager</span>
-								<span class="bubble">Wiki Editor</span>
-								<span class="bubble">To-Do List Manager</span>
-								<span class="bubble">Wiki Editor</span>
-								<span class="bubble">To-Do List Manager</span>
-								<span class="bubble">Wiki Editor</span>
-								<span class="bubble">To-Do List Manager</span>
-								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">Project Workspace Administrator<i class="fa  fa-remove"></i></span>
+								<span class="bubble">issue Tracker Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
 
 							</div>
 						</div>
