--- a/create-new-discussion-thread-remove.html
+++ b/create-new-discussion-thread-remove.html
@@ -129,7 +129,7 @@
 						<li class="active">Project Workspace</li>
 					</ol>
 					 
-				</div>
+				</div> 
 				<h3>US Tech Website Redesign Project</h3>
 			</header>
 		</div> <!-- content-page -->
@@ -203,10 +203,22 @@
 									</div>
 								</div>
 							</div>
-						<footer>
-							<p>11 members can access this message - Do you like to remove someone from the discusion.</p>
-							<a href="" class="blue-underline">Click here</a>
-						</footer>
+						<div class="remove">
+							<p>Member who are part of this Workspace - </p>
+							<a href="" class="blue-underline">Close</a>
+							<div class="members">
+								<span class="bubble">Project Workspace Administrator<i class="fa  fa-remove"></i></span>
+								<span class="bubble">issue Tracker Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+								<span class="bubble">To-Do List Manager<i class="fa  fa-remove"></i></span>
+								<span class="bubble">Wiki Editor<i class="fa  fa-remove"></i></span>
+
+							</div>
+						</div>
 					</div>
 					<button type="button" class="btn btn-success">Post Message</button>
 			</div>  <!-- create-thread -->	
