--- a/html/app-teammember.html
+++ b/html/app-teammember.html
@@ -19,25 +19,8 @@
                                     <span class="bullet">10 Archieve</span>
 
                                 </header>
-                                  <ul class="sidebar-nav list-unstyled">
-                                     
-                                      <li>
-                                          <a href="#">General Settings</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Team Members</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Billing & Invoice</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Change Password</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Update Profile</a>
-                                      </li>                                    
-                                  </ul>
-                              </div>
+                                        <!-- @include html_Moudles/side-nav.html -->
+                                </div>
                               <!-- /#sidebar-wrapper -->
 
                               <!-- Page Content -->
