--- a/html/create-new-discussion-thred-remove.html
+++ b/html/create-new-discussion-thred-remove.html
@@ -20,7 +20,7 @@
 		</div> <!-- content-page -->
 
 			<div class="work-space-nav">
-					<!-- @include html_Moudles/workspace-nav.html --> 		
+					 <!-- @include html_Moudles/workspace-nav.html -->
 			</div>
 			
 			<div class="create-thread">
@@ -45,17 +45,29 @@
 									<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 right">
 										<div action="#" class="dropzone dz-clickable" id="dropzone">                    						
 					                    	<div class="dz-default dz-message">
-					                    		
+					                    	
 					                    		<span>Drag & Drop Files</span>
 					                    	</div>                    	 
 					                     </div>
 									</div>
 								</div>
 							</div>
-						<footer>
-							<p>11 members can access this message - Do you like to remove someone from the discusion.</p>
-							<a href="" class="blue-underline">Click here</a>
-						</footer>
+						<div class="remove">
+							<p>Member who are part of this Workspace - </p>
+							<a href="" class="blue-underline">Close</a>
+							<div class="members">
+								<span class="bubble">Project Workspace Administrator</span>
+								<span class="bubble">issue Tracker Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+								<span class="bubble">To-Do List Manager</span>
+								<span class="bubble">Wiki Editor</span>
+
+							</div>
+						</div>
 					</div>
 					<button type="button" class="btn btn-success">Post Message</button>
 			</div>  <!-- create-thread -->	
