--- a/html/app-change-password.html
+++ b/html/app-change-password.html
@@ -22,19 +22,19 @@
                                   <ul class="sidebar-nav list-unstyled">
                                       
                                       <li>
-                                          <a href="#">General Settings</a>
+                                          <a href="app-settings.html">General Settings</a>
                                       </li>
                                       <li>
-                                          <a href="#">Team Members</a>
+                                          <a href="app-teammember.html">Team Members</a>
                                       </li>
                                       <li>
-                                          <a href="#">Billing & Invoice</a>
+                                          <a href="app-billing.html">Billing & Invoice</a>
                                       </li>
                                       <li>
-                                          <a href="#">Change Password</a>
+                                          <a href="app-change-password.html">Change Password</a>
                                       </li>
                                       <li>
-                                          <a href="#">Update Profile</a>
+                                          <a href="app-update-profile.html">Update Profile</a>
                                       </li>                                    
                                   </ul>
                               </div>
