--- a/html/app-update-profile.html
+++ b/html/app-update-profile.html
@@ -19,24 +19,7 @@
                                     <span class="bullet">10 Archieve</span>
 
                                 </header>
-                                  <ul class="sidebar-nav list-unstyled">
-                                      
-                                      <li>
-                                          <a href="#">General Settings</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Team Members</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Billing & Invoice</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Change Password</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Update Profile</a>
-                                      </li>                                    
-                                  </ul>
+                                <!-- @include html_Moudles/side-nav.html -->
                               </div>
                               <!-- /#sidebar-wrapper -->
 
