--- a/html/html_Moudles/nav-3.html
+++ b/html/html_Moudles/nav-3.html
@@ -19,7 +19,7 @@
         </li>
         
         <li>
-          <a href="">Back to Workspace</a> 
+          <a href="workspace-dashboad.html">Back to Workspace</a> 
         </li>  
         
       </ul>
