--- a/html/html_Moudles/nav.html
+++ b/html/html_Moudles/nav.html
@@ -19,7 +19,7 @@
           <div class="triangle"></div>
           <ul class="dropdown-menu left">
             <li>
-              <a href="#">Add Project</a>
+              <a href="project-create.html">Add Project</a>
             </li>
             <li>
               <a href="#">Add To-Do Task</a>
@@ -48,27 +48,27 @@
           <div class="triangle"></div>
           <ul class="dropdown-menu right">
             <li>
-              <a href="#">Edit Your Profile</a>
+              <a href="app-update-profile.html">Edit Your Profile</a>
             </li>
             <li>
-              <a href="#">Change Password</a>
+              <a href="app-change-password.html">Change Password</a>
             </li>
             <li>
-              <a href="#">Team Members</a>
+              <a href="app-teammember.html">Team Members</a>
             </li>
             <li>
-              <a href="#">Update Profile</a>
+              <a href="app-update-profile.html">Update Profile</a>
             </li>
             <li>
-              <a href="#">Billing & Package</a>
+              <a href="app-billing.html">Billing & Package</a>
             </li>
             <li>
-              <a href="#">Logoff</a>
+              <a href="login.html">Logoff</a>
             </li>
           </ul>
         </li>
         <li class="">
-          <a href=""><i class="logout"></i></a>
+          <a href="login.html"><i class="logout"></i></a>
         </li>
         
       </ul>
